# functional-brain-imaging-lab

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  README.md  conferences.html  facilities.html  feed.xml  fix_html.py  index.html  joinus.html  member-form.html  news.html  people.html  publications.html  research.html  robots.txt  sitemap.xml  toronto.html  verify_site.py
.github/workflows/: fetch-publications.yml
animation/: .clangd  .gitignore  CMakeLists.txt  build_wasm.sh
animation/src/: main.cpp  parallax.cpp  parallax.h  renderer.cpp  renderer.h  scene_manager.cpp  scene_manager.h
css/: style.css
data/: news.json  people.json  publications.json
data/i18n/: en.json  fr.json
fr/: conferences.html  equipe.html  index.html  installations.html  joignez-vous.html  nouvelles.html  publications.html  recherche.html  toronto.html
js/: animations.js  i18n.js  intro-controller.js  intro.data  intro.js  intro.wasm  neural-bg.js  news.js  people.js  publications.js  search.js
scripts/: fetch_publications.py
